--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "helmet": "^3.18.0",
     "morgan": "^1.9.1",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
