--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "helmet": "^3.18.0",
+    "jshint": "^2.10.2",
     "morgan": "^1.9.1",
     "request": "^2.88.0"
   },
