--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "helmet": "^3.18.0",
     "jshint": "^2.10.2",
+    "mongoose": "^5.7.3",
     "morgan": "^1.9.1",
     "request": "^2.88.0"
   },
