--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "helmet": "^3.18.0",
+    "heroku-logger": "^0.3.3",
     "jshint": "^2.10.2",
     "mongoose": "^5.7.3",
     "morgan": "^1.9.1",
