--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jshint": "^2.10.2",
     "mongoose": "^5.7.3",
     "morgan": "^1.9.1",
+    "node-restful": "^0.2.6",
     "request": "^2.88.0"
   },
   "devDependencies": {
